# loan-pricing-engine

./: pyproject.toml
requirements/: base.txt  dev.txt
src/loan_pricing/: config.py  main.py
src/loan_pricing/api/: __init__.py  dependencies.py  endpoints.py  schemas.py
src/loan_pricing/domain/: __init__.py  exceptions.py  models.py  services.py
src/loan_pricing/infrastructure/: __init__.py  excel_loader.py  repositories.py
src/loan_pricing/tests/units/: test_services.py
templates/: loan_model.xlsx
